Add animated navbar, social links, and CV downloads
Enhanced the navigation bar with animated letter-by-letter effects and improved accessibility. Added WhatsApp icon and support in the icon map. Updated the contact section to include a social media card (LinkedIn, GitHub, WhatsApp) and a new CV download section with Spanish and English options. Added placeholder and instruction files for CVs, and updated .gitignore and local settings.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ pnpm-debug.log*
 # jetbrains setting folder
 .idea/
 src/components/GetInTouch.astro
+.claude/settings.local.json
+.claude/settings.local.json
+.claude/settings.local.json
