--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.12.0",
+    "autoprefixer": "^10.4.21",
     "emailjs-com": "^3.2.0",
-    "tailwindcss": "^4.1.11"
+    "lightningcss": "^1.30.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@rollup/rollup-win32-x64-msvc": "^4.45.1"
