--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.46.1",
     "rollup": "^4.46.1"
   }
 }
