Update asset paths for GitHub Pages deployment
Replaced hardcoded asset paths with dynamic paths using import.meta.env.BASE_URL to ensure compatibility with GitHub Pages deployment. Added site and base config to astro.config.mjs, included @vercel/speed-insights integration, and updated package.json scripts and dependencies for deployment support.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.12.0",
     "autoprefixer": "^10.4.21",
     "emailjs-com": "^3.2.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@rollup/rollup-win32-x64-msvc": "^4.46.1",
+    "gh-pages": "^6.3.0",
     "rollup": "^4.46.1"
   }
 }
