--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro",
     "deploy": "gh-pages -d dist"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@vercel/speed-insights": "^1.2.0",
@@ -19,8 +22,6 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "^4.46.1",
-    "gh-pages": "^6.3.0",
-    "rollup": "^4.46.1"
+    "gh-pages": "^6.3.0"
   }
 }
