--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@rollup/rollup-win32-x64-msvc": "^4.46.2",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.12.0",
     "autoprefixer": "^10.4.21",
-    "emailjs-com": "^3.2.0",
     "lightningcss": "^1.30.1",
+    "rollup": "^4.46.2",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
