--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
     "build": "astro build",
+    "dev": "astro dev",
+    "start": "astro dev",
     "preview": "astro preview",
     "astro": "astro",
     "deploy": "gh-pages -d dist"
