--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "deploy": "gh-pages -d dist"
   },
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "^5.12.0",
     "autoprefixer": "^10.4.21",
     "lightningcss": "^1.30.1",
     "rollup": "^4.46.2",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "astro": "^3.6.5",
+    "gh-pages": "^6.3.0",
+    "typescript": "^5.8.3"
   }
 }
