--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "astro": "^3.6.5",
+    "@rollup/rollup-win32-x64-msvc": "^4.52.5",
+    "astro": "^5.14.8",
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.8.3"
   }
 }
