--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.18.x"
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.21",
     "lightningcss": "^1.30.1",
     "rollup": "^4.46.2",
+    "@rollup/rollup-win32-x64-msvc": "4.46.2",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
