--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.16.3",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
