--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "node": "20.19.x"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.2",
-    "autoprefixer": "^10.4.21",
-    "lightningcss": "^1.30.1",
-    "rollup": "^4.46.2",
-    "tailwindcss": "^3.4.0"
+    "@astrojs/tailwind": "6.0.2",
+    "autoprefixer": "10.4.21",
+    "lightningcss": "1.30.1",
+    "rollup": "4.46.2",
+    "tailwindcss": "3.4.0"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^3.6.0",
-    "astro": "^5.16.3",
-    "autoprefixer": "^10.4.14",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.8.3"
+    "@astrojs/sitemap": "3.6.0",
+    "astro": "5.16.3",
+    "autoprefixer": "10.4.21",
+    "gh-pages": "6.3.0",
+    "postcss": "8.4.23",
+    "tailwindcss": "3.4.0",
+    "typescript": "5.8.3"
   }
 }
