--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "astro dev",
     "preview": "astro preview",
     "astro": "astro",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "generate-sw": "workbox generateSW workbox-config.js"
   },
   "engines": {
     "node": "20.19.x"
@@ -28,6 +29,7 @@
     "gh-pages": "6.3.0",
     "postcss": "8.5.6",
     "tailwindcss": "3.4.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "workbox-cli": "^7.4.0"
   }
 }
