Add i18n attributes and update project descriptions
Introduced data-i18n attributes for multilingual support in Footer and index page elements. Updated project descriptions in Projects.astro to support both English and Spanish, and adjusted the rendering logic accordingly. Also changed Dependabot update interval to monthly and reduced open PR limit, and removed the CodeQL workflow.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,11 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       day: "monday"
       time: "06:00"
       timezone: "UTC"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 3
     ignore:
       - dependency-name: "typescript"
         versions: ["<=5.8.3"]
