--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "tailwindcss": "3.4.0",
     "typescript": "5.9.3",
     "workbox-cli": "^7.4.0"
-  }
+  },
+  "packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6"
 }
