--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   "dependencies": {
     "@astrojs/tailwind": "6.0.2",
     "autoprefixer": "10.4.21",
+    "framer-motion": "^12.29.2",
     "lightningcss": "1.30.2",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "rollup": "4.55.1",
     "sharp": "^0.33.4",
     "tailwindcss": "3.4.0"
   },
   "devDependencies": {
     "@astrojs/sitemap": "3.6.1",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "astro": "5.16.8",
     "autoprefixer": "10.4.21",
     "gh-pages": "6.3.0",
