--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "20.19.x"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "6.0.2",
     "autoprefixer": "10.4.21",
     "framer-motion": "^12.29.2",
